add unfix menu.

--- a/assets/css/sass/elements/_mainHeader.sass
+++ b/assets/css/sass/elements/_mainHeader.sass
@@ -4,12 +4,13 @@
 
 =mainHeader
   #main-header
-    position: fixed
-    top: 0
-    left: 0
-    right: 0
-    z-index: 2000
     +transition(all .5s)
+    +respond-to(small-height, min)
+      position: fixed
+      top: 0
+      left: 0
+      right: 0
+      z-index: 2000  
   +logo
   +headerMenu
   +collapsedMenu
