--- a/assets/css/sass/layout/_layout.sass
+++ b/assets/css/sass/layout/_layout.sass
@@ -1,20 +1,28 @@
 // -------------------------------- setLayoutHeights
 =setLayoutHeights($h, $f) 
+  $with_header_h: calc(100vh - #{$h})
+  $with_header_and_footer_h: calc(100vh - #{$h + $f})
+  $with_footer_h: calc(100vh - #{$f})
   #main-header  
     height: $h 
   #sections 
     &::before
       height: $h 
+      +respond-to(small)
+        height: 0
     .section 
       height: 100%
-      min-height: calc(100vh - #{$h})
+      min-height: $with_header_h
       &.fullscreen
-        max-height: calc(100vh - #{$h})
+        max-height: $with_header_h
       &.last 
         $th: $h + $f
-        min-height: calc(100vh - #{$th})
+        min-height: $with_header_and_footer_h
         &.fullscreen
-          max-height: calc(100vh - #{$th})
+          max-height: $with_header_and_footer_h
+          +respond-to(small)
+            max-height: $with_footer_h !important
+            height: $with_footer_h !important
   .footer 
     height: $f
        
