adjust layout heights.

--- a/assets/css/sass/layout/_layout.sass
+++ b/assets/css/sass/layout/_layout.sass
@@ -22,7 +22,7 @@
           max-height: $with_header_and_footer_h
           +respond-to(small)
             max-height: $with_footer_h !important
-            height: $with_footer_h !important
+            min-height: $with_footer_h !important
   .footer 
     height: $f
        
