--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,7 +303,7 @@ p {
   height: 111px; }
 .state1 #sections::before, .state2 #sections::before {
   height: 111px; }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-height: 650px) and (max-width: 700px) {
     .state1 #sections::before, .state2 #sections::before {
       height: 0; } }
 .state1 #sections .section, .state2 #sections .section {
@@ -315,7 +315,7 @@ p {
     min-height: calc(100vh - 211px); }
     .state1 #sections .section.last.fullscreen, .state2 #sections .section.last.fullscreen {
       max-height: calc(100vh - 211px); }
-      @media screen and (max-width: 480px) {
+      @media screen and (max-height: 650px) and (max-width: 700px) {
         .state1 #sections .section.last.fullscreen, .state2 #sections .section.last.fullscreen {
           max-height: calc(100vh - 100px) !important;
           min-height: calc(100vh - 100px) !important; } }
@@ -326,7 +326,7 @@ p {
     height: 100px; }
   .state1 #sections::before, .state2 #sections::before {
     height: 100px; } }
-  @media screen and (max-width: 480px) and (max-width: 480px) {
+  @media screen and (max-width: 480px) and (max-height: 650px) and (max-width: 700px) {
     .state1 #sections::before, .state2 #sections::before {
       height: 0; } }
 @media screen and (max-width: 480px) {
@@ -339,7 +339,7 @@ p {
       min-height: calc(100vh - 180px); }
       .state1 #sections .section.last.fullscreen, .state2 #sections .section.last.fullscreen {
         max-height: calc(100vh - 180px); } }
-      @media screen and (max-width: 480px) and (max-width: 480px) {
+      @media screen and (max-width: 480px) and (max-height: 650px) and (max-width: 700px) {
         .state1 #sections .section.last.fullscreen, .state2 #sections .section.last.fullscreen {
           max-height: calc(100vh - 80px) !important;
           min-height: calc(100vh - 80px) !important; } }
@@ -351,7 +351,7 @@ p {
     height: 85px; }
   .state1 #sections::before, .state2 #sections::before {
     height: 85px; } }
-  @media screen and (max-width: 350px) and (max-width: 480px) {
+  @media screen and (max-width: 350px) and (max-height: 650px) and (max-width: 700px) {
     .state1 #sections::before, .state2 #sections::before {
       height: 0; } }
 @media screen and (max-width: 350px) {
@@ -364,7 +364,7 @@ p {
       min-height: calc(100vh - 165px); }
       .state1 #sections .section.last.fullscreen, .state2 #sections .section.last.fullscreen {
         max-height: calc(100vh - 165px); } }
-      @media screen and (max-width: 350px) and (max-width: 480px) {
+      @media screen and (max-width: 350px) and (max-height: 650px) and (max-width: 700px) {
         .state1 #sections .section.last.fullscreen, .state2 #sections .section.last.fullscreen {
           max-height: calc(100vh - 80px) !important;
           min-height: calc(100vh - 80px) !important; } }
@@ -376,7 +376,7 @@ p {
     height: 60px; }
   .state1 #sections::before, .state2 #sections::before {
     height: 60px; } }
-  @media screen and (max-height: 650px) and (orientation: landscape) and (max-width: 480px) {
+  @media screen and (max-height: 650px) and (orientation: landscape) and (max-height: 650px) and (max-width: 700px) {
     .state1 #sections::before, .state2 #sections::before {
       height: 0; } }
 @media screen and (max-height: 650px) and (orientation: landscape) {
@@ -389,7 +389,7 @@ p {
       min-height: calc(100vh - 120px); }
       .state1 #sections .section.last.fullscreen, .state2 #sections .section.last.fullscreen {
         max-height: calc(100vh - 120px); } }
-      @media screen and (max-height: 650px) and (orientation: landscape) and (max-width: 480px) {
+      @media screen and (max-height: 650px) and (orientation: landscape) and (max-height: 650px) and (max-width: 700px) {
         .state1 #sections .section.last.fullscreen, .state2 #sections .section.last.fullscreen {
           max-height: calc(100vh - 60px) !important;
           min-height: calc(100vh - 60px) !important; } }
@@ -424,14 +424,15 @@ p {
 #main-header {
   -webkit-transition: all 0.5s;
   -ms-transition: all 0.5s;
-  transition: all 0.5s; }
-  @media screen and (min-height: 650px) and (max-width: 700px) {
+  transition: all 0.5s;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2000; }
+  @media screen and (max-width: 480px) {
     #main-header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      z-index: 2000; } }
+      position: static; } }
 
 #logo {
   max-width: 149px;
