fix main-header short screen.

--- a/assets/css/sass/elements/_mainHeader.sass
+++ b/assets/css/sass/elements/_mainHeader.sass
@@ -6,7 +6,7 @@
   #main-header
     +transition(all .5s)
     position: fixed
-    +respond-to(small, max)
+    +respond-to(small-height, max)
       position: static
     top: 0
     left: 0
