--- a/assets/css/sass/_settings.sass
+++ b/assets/css/sass/_settings.sass
@@ -55,6 +55,7 @@ $break-medium: 650px
 $break-large: 1350px
 
 
-// ---------------------------------- SIDE MENU
+// -------------------------------------- MENUS
 
-$useSideMenu: false
+$useSideMenu: true
+$useStaticMenu: false
