--- a/assets/css/sass/style.sass
+++ b/assets/css/sass/style.sass
@@ -11,6 +11,7 @@
 @import "elements/headerWrapper"
 @import "elements/mainHeader"
 @import "elements/sideMenu"
+@import "elements/staticMenu"
 @import "elements/grid"
 @import "elements/footer"
 
